Assorted fixes to get Chicago GTFS to load.
*  Increase various timeouts
*  Bump memory (scala needed 7GB to calculate Chicago's indicators)
*  Add println statements to indicator calculations, for debugging