@@ -55,9 +55,9 @@ GTFS_PARSER_REPO_URI="https://github.com/echeipesh/gtfs-parser.git"
 GTFS_PARSER_REPO_BRANCH="master"
 
 # Time limit for indicator calculations to finish before retrying
-INDICATOR_SOFT_TIME_LIMIT_SECONDS="600"
-
+INDICATOR_SOFT_TIME_LIMIT_SECONDS="5400"
 UPLOADS_ROOT='/var/local/transit-indicators-uploads' # Storage for user-uploaded files
+
 ANGULAR_ROOT="$PROJECT_ROOT/js/angular"
 WINDSHAFT_ROOT="$PROJECT_ROOT/js/windshaft"
 LOG_ROOT="$PROJECT_ROOT/logs"
@@ -77,7 +77,7 @@ VHOST_NAME=$DB_NAME
 GEOTRELLIS_PORT=8001
 GEOTRELLIS_HOST="http://127.0.0.1:$GEOTRELLIS_PORT"
 GEOTRELLIS_CATALOG="data/catalog.json"
-GEOTRELLIS_MEM_MB=3072      # For the oti-geotrellis upstart job
+GEOTRELLIS_MEM_MB=7168      # For the oti-geotrellis upstart job
 RABBIT_MQ_HOST="127.0.0.1"
 RABBIT_MQ_PORT="5672"
 TRANSITFEED_VERSION=1.2.12
@@ -521,8 +521,8 @@ database.geom-name-utm = \"geom\"
 database.name = \"$DB_NAME\"
 database.user = \"$DB_USER\"
 database.password = \"$DB_PASS\"
-spray.can.server.idle-timeout = 1260 s
-spray.can.server.request-timeout = 1200 s
+spray.can.server.idle-timeout = 3320 s
+spray.can.server.request-timeout = 3200 s
 "
 
 pushd $GEOTRELLIS_ROOT/src/main/resources/
@@ -536,7 +536,7 @@ kill timeout 30
 
 chdir $GEOTRELLIS_ROOT
 
-exec ./sbt -mem $GEOTRELLIS_MEM_MB run
+exec ./sbt -mem $GEOTRELLIS_MEM_MB -XX:-UseConcMarkSweepGC -XX:+UseGCOverheadLimit run
 "
 geotrellis_conf_file="/etc/init/oti-geotrellis.conf"
 echo "$geotrellis_conf" > "$geotrellis_conf_file"
@@ -589,7 +589,7 @@ nginx_conf="server {
 
     location /gt {
         proxy_pass $GEOTRELLIS_HOST;
-        proxy_read_timeout 300s;
+        proxy_read_timeout 1800s;
         proxy_redirect off;
         proxy_set_header Host \$host;
         proxy_set_header X-Real-IP \$remote_addr;
@@ -600,7 +600,7 @@ nginx_conf="server {
         proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
         proxy_set_header Host \$http_host;
         proxy_pass http://unix:/tmp/gunicorn.sock:;
-        client_max_body_size 50M;
+        client_max_body_size 100M;
     }
 
     location /tiles {
